--- a/The_Third_Lesson.csproj
+++ b/The_Third_Lesson.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Expressions_For_Calculator\Expressions_For_Calculator.csproj" />
+  </ItemGroup>
+
 </Project>
